# Backend

./: .env  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/routers/: auth.py  survey.py  users.py
app/core/: config.py
app/crud/: __init__.py  crud_answer.py  crud_question.py  crud_question_option.py  crud_survey.py  crud_user.py
app/db/: base.py  connection.py
app/models/: answer.py  question.py  question_option.py  survey.py  user.py
app/schemas/: __init__.py  answer.py  question.py  question_option.py  survey.py  token.py  user.py
