[tool.poetry]
name = "SISPREL"
version = "0.1.0"
description = "Sistema de prediccion electoral"
authors = ["Josué David Hernández Ramírez <justinhernandez054@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.25"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version ="^3.3.0"}
passlib = "^1.7.4"
pydantic = {extras = ["email"], version ="^1.8.2"}
alembic = "^1.7.3"
inflect = "^5.3.0"
bcrypt = "^3.2.0"
SQLAlchemy-Utils = "^0.37.8"
psycopg2-binary = "^2.9.1"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
sqlalchemy-stubs = "^0.4"
flake8 = "^3.9.2"
autoflake = "^1.4"
isort = "^5.9.3"
black = "^21.9b0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
